# aiidalab-mvc

./: Introduce.md  README.md  __init__.py  launcher.ipynb  setup.cfg  start.py
setup/build_script/: create_update-code.sh  setup.sh  setup_computer.sh
setup/config/code/: code_quad.yaml
setup/config/computer/: pias_computer.yaml
src/: app.py  controller.py  model.py  view.py
src/controllers/: controller.py
src/models/: model.py
src/views/: verify_yaml.py  view.py
src/views/yaml_elements/: view.yaml
