[aiidalab]
title = MVC Template

[metadata]
name = aiidalab-mvc
version = 0.1-alpha
author = QMat
author_email = hung.dangthe@phenikaa-uni.edu.vn
description = This is the template for an AiiDAlab app based on the MVC design
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qmat-group/aiidalab-mvc
project_urls =
    Logo = https://raw.githubusercontent.com/qmat-group/aiidalab-mvc/main/img/logo.png
    Documentation = https://github.com/qmat-group/aiidalab-mvc/#readme
    Bug Tracker = https://github.com/qmat-group/aiidalab-mvc/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiidalab>=21.09.0

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
